force-app/main/default/objects/Shipping_Line__c/Shipping_Line__c.object-meta.xml
<CustomObject>
    <label>Shipping Line</label>
    <nameField>
        <label>Shipping Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>