force-app/main/default/objects/Shipping_Line__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shipping Lines</relationshipLabel>
    <relationshipName>Shipping_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>